syntax = "proto3";

package user;

option go_package = "pb/user";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (UserResponse) {}
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
    rpc GetUserByID(GetUserByIDRequest) returns (UserResponse) {}
    rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
    rpc UpdateOrderCount(UpdateOrderCountRequest) returns (UpdateOrderCountResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message RegisterUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message GetUserByIDRequest {
    string id = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message UpdateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message UpdateOrderCountRequest {
    string id = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message LoginUserResponse {
    string token = 1;
}

message UpdateOrderCountResponse {
    string message = 1;
}

message DeleteUserResponse {
    string message = 1;
}